Bug 458209 - Switched from Krita 5.0.6 to 5.1.0, but I have a problem with the color palette in .aco format
Summary: Switched from Krita 5.0.6 to 5.1.0, but I have a problem with the color palet...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color Selectors (other bugs)
Version First Reported In: 5.1.0
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-08-23 12:36 UTC by FT
Modified: 2022-09-08 22:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Color Palette form PhotoShop .aco (11.51 KB, image/x-tga)
2022-08-23 12:36 UTC, FT
Details

Note You need to log in before you can comment on or make changes to this bug.
Description FT 2022-08-23 12:36:32 UTC
Created attachment 151522 [details]
Color Palette form PhotoShop .aco

SUMMARY
***
Hello
I switched from Krita 5.0.6 to 5.1.0, but I have a problem with the color palette in .aco format.
These Palettes do not show the name of the color in the “Docker Palette”.
The same Palette .aco files that worked perfectly with version 5.0.6 now with 5.1.0 are not interpreted correctly, and do not show the name of the color.

Is there any solution that can be tried? I tried to reconstruct the palettes from Photoshop, but it didn’t help.

P.S. For now the only thing that worked was to return to version 5.0.6 where the names of the colors of the palettes are present.

Thank you.
***


STEPS TO REPRODUCE
1. select the single color from the docker palette
2. The color name is not displayed and in its place there is only an empty space

OBSERVED RESULT
The color name is not displayed

EXPECTED RESULT
The color name is not displayed

SOFTWARE/OS VERSIONS
Windows: windows 10 pro

Krita 5.1.0 windows
Comment 1 Halla Rempt 2022-09-07 12:57:21 UTC
Thank you for the report. I can confirm the issue.
Comment 2 Halla Rempt 2022-09-07 13:08:52 UTC
I'm looking into this now. Also, thanks for attaching the aco file, that's very helpful!
Comment 3 Halla Rempt 2022-09-07 13:32:02 UTC
Git commit c497cff451b36eda32a3a185f7afbdd4ac65318e by Halla Rempt.
Committed on 07/09/2022 at 13:31.
Pushed by rempt into branch 'master'.

ACO palettes: set the name of the swatch

M  +51   -49   libs/pigment/resources/KoColorSet.cpp

https://invent.kde.org/graphics/krita/commit/c497cff451b36eda32a3a185f7afbdd4ac65318e
Comment 4 Halla Rempt 2022-09-07 13:32:14 UTC
Git commit 98b422bb032ad3b5db01457c9445e58dd5f7839d by Halla Rempt.
Committed on 07/09/2022 at 13:32.
Pushed by rempt into branch 'krita/5.1'.

ACO palettes: set the name of the swatch
(cherry picked from commit c497cff451b36eda32a3a185f7afbdd4ac65318e)

M  +51   -49   libs/pigment/resources/KoColorSet.cpp

https://invent.kde.org/graphics/krita/commit/98b422bb032ad3b5db01457c9445e58dd5f7839d
Comment 5 Halla Rempt 2022-09-07 13:32:35 UTC
We'll be releasing 5.1.1 next week with this fix in it.
Comment 6 FT 2022-09-08 22:09:28 UTC
Thank you.