ACO palettes: set the name of the swatch

BUG:458209